# learn2gueder

./: README.md
todomvc/: README.md
todomvc/adrianjdelgado-rust/backend/: Cargo.toml  README.md
todomvc/adrianjdelgado-rust/backend/migrations/: 20230621030758_create-table.sql
todomvc/adrianjdelgado-rust/backend/src/: main.rs  models.rs  routes.rs  telemetry.rs
todomvc/aloussase-haskell/: .gitignore  .todomvc.cabal.swp  todomvc.cabal
todomvc/aloussase-haskell/app/: .Main.hs.swp  Main.hs
todomvc/aloussase-haskell/app/Api/: Scotty.hs  Servant.hs
todomvc/aloussase-haskell/app/Contracts/: .Todo.hs.swp  Todo.hs
todomvc/aloussase-haskell/app/Model/: .Todo.hs.swp  Todo.hs
todomvc/aloussase-haskell/frontend/public/: index.css  index.html  index.js
todomvc/aloussase-haskell/frontend/src/: Main.elm  Msg.elm
todomvc/aloussase-haskell/frontend/src/Api/: Todo.elm
todomvc/aloussase-haskell/frontend/src/Model/: Todo.elm
todomvc/aloussase-javascript/: package-lock.json  package.json
todomvc/aloussase-javascript/public/: index.html
todomvc/aloussase-javascript/public/javascript/components/application/: application.component.js  application.template.js
todomvc/aloussase-javascript/public/javascript/components/createtodo/: createtodo.component.js  createtodo.template.js
todomvc/aloussase-javascript/public/javascript/components/todo/: todo.component.js  todo.template.js
todomvc/aloussase-javascript/public/javascript/components/todolist/: todolist.component.js  todolist.template.js
todomvc/aloussase-javascript/src/: index.js
todomvc/aloussase-javascript/src/controller/: healthcheck.js  todos.js
todomvc/aloussase-javascript/src/model/: todo.js
todomvc/aloussase-scala/todomvc/: build.sbt
todomvc/aloussase-scala/todomvc/api/src/main/scala/io/github/aloussase/todomvc/api/: Main.scala
todomvc/aloussase-scala/todomvc/api/src/main/scala/io/github/aloussase/todomvc/api/contracts/todo/: NewTodo.scala
todomvc/aloussase-scala/todomvc/api/src/main/scala/io/github/aloussase/todomvc/api/serdes/: TodoSerdes.scala
todomvc/aloussase-scala/todomvc/project/: Dependencies.scala
todomvc/braulio-js/: package-lock.json  package.json
todomvc/braulio-js/src/: server.js
todomvc/braulio-js/src/controllers/: todoController.js
todomvc/braulio-js/src/models/: todoModel.js
(+7 files in other folders)
