cabal-version:      2.4
name:               todomvc
version:            0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
-- copyright:
-- category:

executable todomvc
    main-is:          Main.hs
    other-modules:    Contracts.Todo
                    , Model.Todo
                    , Api.Scotty
    build-depends:    base ^>=4.16.4.0
                    , scotty
                    , text
                    , aeson
                    , wai
                    , warp
                    , wai-problem-details
                    , deriving-aeson
                    , persistent
                    , persistent-sqlite
                    , http-types
                    , exceptions
    hs-source-dirs:   app
    default-language: Haskell2010
