cabal-version: 2.4
name:          todomvc
version:       0.1.0.0

-- synopsis:
-- description:
-- bug-reports:
-- license:
author:        Alexander Goussas
maintainer:    goussasalexander@gmail.com

-- copyright:
-- category:

executable todomvc
  main-is:          Main.hs
  other-modules:
    Api.Scotty
    Api.Servant
    Contracts.Todo
    Model.Todo

  build-depends:
    , aeson
    , base                   ^>=4.16.4.0
    , deriving-aeson
    , exceptions
    , http-types
    , persistent
    , persistent-sqlite
    , scotty
    , servant
    , servant-server
    , text
    , wai
    , wai-middleware-static
    , wai-problem-details
    , warp

  hs-source-dirs:   app
  default-language: Haskell2010
