[package]
name = "kokoa-todo"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.18"
eyre = "0.6.8"
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
